--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -1,17 +1,19 @@
-#slider {
+#mainSlider {
     width: 100%;
     font-family: Roboto,Arial,sans-serif;
     font-size: 11px;
     font-weight: 400;
 }
- #rectangle3 {
+
+#rectangle3 {
     position: relative;
     width:100%;
     padding-right: 49px;
     padding-left: 120px;
     margin-top: -66px;
-  }
-  #rectangle2 {
+}
+
+#rectangle2 {
     padding-right: 36px;
     padding-left: 36px;
     padding-top: 2px;
@@ -29,3 +31,17 @@
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
+
+#mainSlider .slider-selection {
+    background: transparent !important;
+    -webkit-box-shadow: inset 0 0px 0 rgba(0, 0, 0, 0)!important;
+    box-shadow: inset 0 0px 0 rgba(0, 0, 0, 0)!important;
+}
+
+#mainSlider .slider-tick.in-selection {
+    background-image: -webkit-linear-gradient(top, #f9f9f9 0%, #f5f5f5 100%)!important;
+    background-image: -o-linear-gradient(top, #f9f9f9 0%, #f5f5f5 100%)!important;
+    background-image: linear-gradient(to bottom,  #f9f9f9 0%, #f5f5f5 100%)!important;
+}
+
+
