--- a/main.css
+++ b/main.css
@@ -1,21 +1,15 @@
-#slider .slider-selection {
-    background: transparent !important;
-    -webkit-box-shadow: inset 0 0px 0 rgba(0, 0, 0, 0)!important;
-    box-shadow: inset 0 0px 0 rgba(0, 0, 0, 0)!important;
-}
-.slider-tick.in-selection {
-    background-image: -webkit-linear-gradient(top, #f9f9f9 0%, #f5f5f5 100%)!important;
-    background-image: -o-linear-gradient(top, #f9f9f9 0%, #f5f5f5 100%)!important;
-    background-image: linear-gradient(to bottom,  #f9f9f9 0%, #f5f5f5 100%)!important;
-}
-
 .info-window{
     font-family: 'Roboto','sans-serif';  
     /*background-color: #f45;*/
   }
   
-.tooltip-layer-component{
+.tooltip-layer-component {
    width: 200px;
+}
+
+.tooltip-search {
+   width: 178px;
+   margin-bottom: 5px;
 }
 
   /*#slider {
