--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -32,6 +32,25 @@
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
 
+#rectangle2IE {
+    padding-right: 36px;
+    padding-left: 46px;
+    padding-top: 2px;
+    width:100%;
+    background-color: white;
+    height: 43px;
+    margin-bottom: 7px;
+
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  }
+
 #mainSlider .slider-selection {
     background: transparent !important;
     -webkit-box-shadow: inset 0 0px 0 rgba(0, 0, 0, 0)!important;
